tools/tests/errors/surf_num_10.ki
# acos outside [-1, 1] is a math domain error.
var m = import("math")
discard m.acos(2)
